chore: return remotes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -108,6 +108,10 @@ Suggests:
     trendsceek,
     testthat (>= 3.0.0),
     rmarkdown
+Remotes:
+    drieslab/GiottoUtils,
+    drieslab/GiottoClass,
+    drieslab/GiottoVisuals
 Collate:
     'ONTraC_wrapper.R'
     'auxiliary_giotto.R'
