--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,9 +177,11 @@ export(doLeidenClusterIgraph)
 export(doLeidenSubCluster)
 export(doLouvainCluster)
 export(doLouvainSubCluster)
+export(doMesmerSegmentation)
 export(doRandomWalkCluster)
 export(doSNNCluster)
 export(doScrubletDetect)
+export(doStardistSegmentation)
 export(estimateAutomatedImageRegistrationWithSIFT)
 export(estimateImageBg)
 export(exportGiottoViewer)
