--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ export(doLouvainSubCluster)
 export(doRandomWalkCluster)
 export(doSNNCluster)
 export(doScrubletDetect)
+export(dotPlot)
 export(estimateAutomatedImageRegistrationWithSIFT)
 export(estimateImageBg)
 export(exportGiottoViewer)
@@ -751,6 +752,7 @@ importFrom(GiottoVisuals,dimGenePlot3D)
 importFrom(GiottoVisuals,dimPlot)
 importFrom(GiottoVisuals,dimPlot2D)
 importFrom(GiottoVisuals,dimPlot3D)
+importFrom(GiottoVisuals,dotPlot)
 importFrom(GiottoVisuals,getColors)
 importFrom(GiottoVisuals,giottoSankeyPlan)
 importFrom(GiottoVisuals,plotHeatmap)
